syntax = "proto3";
import "prompts.proto";

message ModelData {
    string name = 1;
    AgentType agent = 2;
}

